Bug 784975 - New App Menu button hard to see on dark themes. r+ui-r=bwinton DONTBUILD

--- a/mail/themes/qute/mail/primaryToolbar-aero.css
+++ b/mail/themes/qute/mail/primaryToolbar-aero.css
@@ -395,6 +395,10 @@ toolbox[labelalign="end"] > toolbar[mode="full"] .toolbarbutton-1[type="menu"] {
   }
 }
 
+#mail-bar3:-moz-lwtheme-brighttext .toolbarbutton-1 {
+   list-style-image: url("chrome://messenger/skin/icons/mail-toolbar-inverted.png");
+}
+
 #button-getmsg {
   list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.png");
   -moz-image-region: rect(1px, 17px, 17px, 1px);
